--- a/.github/workflows/website_deploy.yml
+++ b/.github/workflows/website_deploy.yml
@@ -2,14 +2,13 @@ name: Deploy to GitHub Pages
 
 on:
     push:
-        tags:
-            - "*"
+        branches: [ master ]
     # Allows you to run this workflow manually from the Actions tab on GitHub.
     workflow_dispatch:
 
 # Allow this job to clone the repo and create a page deployment
 permissions:
-    contents: write
+    contents: read
     pages: write
     id-token: write
 
@@ -34,4 +33,4 @@ jobs:
         steps:
             - name: Deploy to GitHub Pages
               id: deployment
-              uses: actions/deploy-pages@v2
+              uses: actions/deploy-pages@v1
