--- a/website/package.json
+++ b/website/package.json
@@ -16,5 +16,8 @@
     "@astrojs/tailwind": "^4.0.0",
     "astro": "^2.10.3",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "postcss-import": "^15.1.0"
   }
 }
